fix sidebar overflow and update README

--- a/css/style.css
+++ b/css/style.css
@@ -29,16 +29,17 @@ form input{
     width:25%;
     border: 1px solid gray;
     background-color: rgba(255,255,255,0.9);
-    max-height: 100%;
+    max-height: 94%;
+    overflow: auto;
 }
+
+
 
 .searchbar{
     padding: 7px;
 
 }
 
-.places{
-}
 
 .placesResult{
     font-size: 20px;
@@ -56,10 +57,10 @@ form input{
     border: 0;
 }
 
+
+
 .resultsList{
     list-style-type: none;
-    overflow: auto;
-    max-height: 300px;
     padding: 0;
 }
 
